# ChangeLog for app-i18n/fcitx-configtool
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/fcitx-configtool/ChangeLog,v 1.4 2011/09/02 00:55:27 qiaomuf Exp $

  02 Sep 2011; Mu Qiao <qiaomuf@gentoo.org> fcitx-configtool-0.2.0.ebuild:
  Add slot dependency for libunique

*fcitx-configtool-0.2.0 (18 Dec 2010)

  18 Dec 2010; Mu Qiao <qiaomuf@gentoo.org> +fcitx-configtool-0.2.0.ebuild,
  +files/fcitx-configtool-0.2.0-fix-gtk.patch:
  Version bumped. Thanks for Havanna's help.

*fcitx-configtool-0.1.4 (28 Nov 2010)

  28 Nov 2010; <qiaomuf@gentoo.org> +fcitx-configtool-0.1.4.ebuild,
  +metadata.xml:
  Initial commit.
