@@ -4,18 +4,20 @@ Hash: SHA1
 AUX fcitx-configtool-0.2.0-fix-gtk.patch 1137 RMD160 1190b0016f1b476d1b9955d8f727943ba3814d32 SHA1 59da0780a9326034e0cbb3578caab2b2de8a28a7 SHA256 f2bf4bcd51cbcc6b7f4cb4eb6d0d8e8b276858217ad4ea3b254e4bd171ba5405
 DIST fcitx-configtool-0.1.4.tar.gz 234329 RMD160 3baa5dd74f5d331f2183f9444ac050d97f72f63f SHA1 01de43eb9fb8b7869e273205977d501b924b7c98 SHA256 9b69fa0a3fae57573729a3dde666baf03144fa3582c620f56f4bb0074bc717c3
 DIST fcitx-configtool-0.2.0.tar.gz 37435 RMD160 e40e9563160f9b8c9accc0da3b1b48411a58a184 SHA1 b670a171f49ed149098589f10db3bbf7dd546af5 SHA256 2c309f2df500cf7c1b0d13b446a69e3513a11588025a2f648b18b684cc2320fe
+DIST fcitx-configtool-0.3.1.tar.bz2 22323 RMD160 4a55a3b229e5b5c733654d1d3791d71a1f27d988 SHA1 26dcf97d705a565e2a803028fa04b3fec834a460 SHA256 60a2596ca3c36d0c98398d36d4eb5f1f03992133a782ae15cb39f66131aeaa3e
 EBUILD fcitx-configtool-0.1.4.ebuild 624 RMD160 4bdcd1e16b658681b3e12af89a5b28f34054289b SHA1 fb59f761f6de5a59835ac66202b65f45ee265650 SHA256 85da4ac7c19b4caa88b513877e00ba7c429c4ea4adb10f1aa033f5a73a3ea520
 EBUILD fcitx-configtool-0.2.0.ebuild 706 RMD160 a1307fae37af10631fdbbcf1be1900fd500ffae5 SHA1 f1710dc95cad769efaa4d2a83d0784924eb7316b SHA256 6e8e73218f367f7f63ee74da51e5b2692c0f3cb310153ed3e847b98b443fa149
-MISC ChangeLog 687 RMD160 05136637e69c8655a8ce5eeac343a7024dc39d7d SHA1 febc981a09e5450f8b9f49e5e3d1024c28eb0105 SHA256 25a0ad04e59199ed9ff6b0ab2deaf683bb594e713b2ec03d3ac32cbf035b88e9
+EBUILD fcitx-configtool-0.3.1.ebuild 621 RMD160 591229d15532d69d0a2b998f264dc5b9b333d185 SHA1 da94e6dea417e8096841899c5dc316d415d8df7a SHA256 e304134328ea7f077ed201dc6e8c0cfb1811678674a7523a484de20a98a324fc
+MISC ChangeLog 845 RMD160 48ec8cef2150a229986924e0c9c4274847b27001 SHA1 9f9714ffe8fd69dcb4dd84a153e5ee4e5f1238ac SHA256 a6ba7e731759dc31a17a05f8498e880a5d1e837018de0e9c459d72aa749c96cf
 MISC metadata.xml 245 RMD160 2d1e4eea4de4ff8057cfdf0c96312f790f1c1106 SHA1 5c647f48bd82ea65d6ae1e57e86f3dd8bbdf84cd SHA256 a870d257a80bf886f11d7a5c8391e2908f1cc6db0e675cccf4e486653cace393
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iQEcBAEBAgAGBQJOsObvAAoJEDCzDeQXsVfpj+IIAJRVuyonL4uXxh75x95iTmDk
-TnqP2whvyBhRN/tHMjlbA5eBqdw/Cd6og3lqO6k/EhRWixiEMPhanKg11mxpaptq
-3N0QduK6B/6EVsGrDiX1xkYA126KedXvn9F388hnwJc8A+2c05KbUbAhmvEfRse8
-LUd8vmmv93StNofnR/AR/MMvpdR8Dtiv85mfKCKwNebhvWWxvziz9a0rlrHuUdTi
-RWkd0UF4zBQlgUXdu8VfueRo0e9Zfpb54WtZXhYKT4CNNp5+hWtnIzI9kEe6cInu
-TXIs6sRQtGbCeVvx/lLv5yvkJ4WjxEWoWhoH3ynsZVXhX/faPTBPF/A6P0JxN9w=
-=pAxQ
+iQEcBAEBAgAGBQJOsOodAAoJEDCzDeQXsVfpTbMH/1rcDOEzEt6Eq9hn20R9wl87
+F0EAL0GuID6zKjJVsiVgUYxHy/Q3vjv8mJV0ghdE3lr3UNNuQmaiXnjAcRJljBNR
+1/akJA8P6UVJPOw61T2fZ8egOXMwIpQeJnVr3VaY+LIFhyrRStxfBEn/TJAxLbxH
+eb77rMhUtdCAUd8BAALNnkaDFc4seOZfjSbywyTBidldLlpULL7AM+c+uRL/VREq
+VAOReugtFAp8wR4eESrE8IebHu1s3lTxptEut9ZF2zQ35Z6ZimzQCaxO/AAFUuJ/
+e6lHF8Lr5w7AAHc5cpUUZxKcv4ITGiJrWVMUJnu+7tC5LcfEoBCYwB0iU7CAsew=
+=xeBM
 -----END PGP SIGNATURE-----
